# qt5-dark-theme

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  config_build_relwithdeb.bat
ThemeTest/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: Kvantum.h  pbscolorscheme.h  plugin.h
src/: Kvantum.cpp  Kvantum.h  ThemeConfig.cpp  ThemeConfig.h  eventFiltering.cpp  kguiaddons_export.h  kvantum.json  pbscolorconfig.cpp  pbscolorconfig.h  pbscolorscheme.cpp  pbsskin.cpp  pbsskin.h  plugin.cpp  plugin.h  polishing.cpp
